apps/tpi-1/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: default
  labels:
    homelab.wahoo.li/exposure: public
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "vault.${domain_absolutist_it:=absolutist.it}"
  - "vault.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: vaultwarden
      port: 80
